--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ backcall==0.1.0
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.4.1
 gast==0.2.2
 google-auth==1.10.0
@@ -19,7 +20,9 @@ joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
 Markdown==3.1.1
+matplotlib==3.1.2
 numpy==1.17.4
 oauthlib==3.1.0
 opt-einsum==3.1.0
@@ -33,6 +36,7 @@ ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 Pygments==2.5.2
+pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.2
